<resources>
    <string name="app_name">GlovoTechTest</string>
    <string name="title_activity_main">Map</string>
    <string name="city_dialog_title">Please enter your city</string>
    <string name="city_dialog_ok">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="info_city">City: </string>
    <string name="no_info">No city selected</string>
    <string name="info_country">Country:</string>
    <string name="info_enabled">Enabled:</string>
    <string name="info_busy">Busy:</string>
</resources>
